--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name=".provider.RxMapsContentProvider"
+            android:authorities="com.tehmou.rxmaps.provider"
+            android:exported="false" />
     </application>
 
 </manifest>
